tests/fixtures/invalid/bad-user-profile-config-2.yini
@yini

^ profile
  username = "robinkoda"
  display_name = 'Robin Koda'
  email = "robin@example.com"
  avatar = null
  is_active = true
  roles = ["user", "editor"]]               // ERROR: Non-matching closing bracket
  created_at = "2024-05-12T10:30:00Z"
